5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1674_1102.log
== TEST (2019-05-01 22:34:57) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
H = float(input("Digite a H: "))
h = float(input("Digite a h: "))
r = float(input("Digite a r: "))

print("Entradas:",H,h,r)

if(H<0 or h<0 or r<0 or H<h or H< (2*r) )
 print("Entradas invalidas")
elif(h==r):
	# se altura do nivel for igual ao raio o volume vai ser metade da esfera
	volume = (4/3*pi*r**3)/2
elif(h>r and h<=(H-r)):
	# se altura de nivel for maior que o raio e menor ou igual a altura total menos o raio superior
	volume = ((4/3*pi*r**3)/2) + pi*r**2*(h-r)
elif(h>(H-r)):
	x = H-h
	volume = pi*r**2*(h-r) + (4/3*pi*r**3) - pi/3*x**2*(3*r-x)
	 

-- ERROR:
File "XXXX", line 13
    if(H<0 or h<0 or r<0 or H<h or H< (2*r) )
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:35:32) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
H = float(input("Digite a H: "))
h = float(input("Digite a h: "))
r = float(input("Digite a r: "))

print("Entradas:",H,h,r)

if(H<0 or h<0 or r<0 or H<h or H<2*r )
 print("Entradas invalidas")
elif(h==r):
	# se altura do nivel for igual ao raio o volume vai ser metade da esfera
	volume = (4/3*pi*r**3)/2
elif(h>r and h<=(H-r)):
	# se altura de nivel for maior que o raio e menor ou igual a altura total menos o raio superior
	volume = ((4/3*pi*r**3)/2) + pi*r**2*(h-r)
elif(h>(H-r)):
	x = H-h
	volume = pi*r**2*(h-r) + (4/3*pi*r**3) - pi/3*x**2*(3*r-x)
	 

-- ERROR:
File "XXXX", line 13
    if(H<0 or h<0 or r<0 or H<h or H<2*r )
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:35:39) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
H = float(input("Digite a H: "))
h = float(input("Digite a h: "))
r = float(input("Digite a r: "))

print("Entradas:",H,h,r)

if(H<0 or h<0 or r<0 or H<h or H<2*r ):
 print("Entradas invalidas")
elif(h==r):
	# se altura do nivel for igual ao raio o volume vai ser metade da esfera
	volume = (4/3*pi*r**3)/2
elif(h>r and h<=(H-r)):
	# se altura de nivel for maior que o raio e menor ou igual a altura total menos o raio superior
	volume = ((4/3*pi*r**3)/2) + pi*r**2*(h-r)
elif(h>(H-r)):
	x = H-h
	volume = pi*r**2*(h-r) + (4/3*pi*r**3) - pi/3*x**2*(3*r-x)
	 

-- OUTPUT:
Entradas: 11.3 5.7 2.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:36:57) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
H = float(input("Digite a H: "))
h = float(input("Digite a h: "))
r = float(input("Digite a r: "))

print("Entradas:",H,h,r)

if(H<0 or h<0 or r<0 or H<h or H<2*r ):
   print("Entradas invalidas")
elif(h==r):
	# se altura do nivel for igual ao raio o volume vai ser metade da esfera
	volume = (4/3*pi*r**3)/2
	print(round(volume,3))
elif(h>r and h<=(H-r)):
	# se altura de nivel for maior que o raio e menor ou igual a altura total menos o raio superior
	volume = ((4/3*pi*r**3)/2) + pi*r**2*(h-r)
	print(round(volume,3))
elif(h>(H-r)):
	x = H-h
	volume = pi*r**2*(h-r) + (4/3*pi*r**3) - pi/3*x**2*(3*r-x)
	print(round(volume,3))
	 

-- OUTPUT:
Entradas: 11.3 5.7 2.3
81.987
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:37:18) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
H = float(input("Digite a H: "))
h = float(input("Digite a h: "))
r = float(input("Digite a r: "))

print("Entradas:",H,",",h,",",r)

if(H<0 or h<0 or r<0 or H<h or H<2*r ):
   print("Entradas invalidas")
elif(h==r):
	# se altura do nivel for igual ao raio o volume vai ser metade da esfera
	volume = (4/3*pi*r**3)/2
	print(round(volume,3))
elif(h>r and h<=(H-r)):
	# se altura de nivel for maior que o raio e menor ou igual a altura total menos o raio superior
	volume = ((4/3*pi*r**3)/2) + pi*r**2*(h-r)
	print(round(volume,3))
elif(h>(H-r)):
	x = H-h
	volume = pi*r**2*(h-r) + (4/3*pi*r**3) - pi/3*x**2*(3*r-x)
	print(round(volume,3))
	 

-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
81.987
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:39:31) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
H = float(input("Digite a H: "))
h = float(input("Digite a h: "))
r = float(input("Digite a r: "))

print("Entradas:",H,",",h,",",r)

if(H<0 or h<0 or r<0 or H<h or H<2*r ):
   print("Entradas invalidas")
elif(h==r):
	# se altura do nivel for igual ao raio o volume vai ser metade da esfera
	volume = (4/3*pi*r**3)/2
	print(round(volume,3),"litros")
elif(h>r and h<=(H-r)):
	# se altura de nivel for maior que o raio e menor ou igual a altura total menos o raio superior
	volume = ((4/3*pi*r**3)/2) + pi*r**2*(h-r)
	print(round(volume,3),"litros")
elif(h>(H-r)):
	x = H-h
	volume = pi*r**2*(h-r) + (4/3*pi*r**3) - pi/3*x**2*(3*r-x)
	print(round(volume,3),"litros")
	 

-- EXECUTION TIME:
0.199088
-- TEST CASE 1:
---- input:
11.3
5.7
2.3
---- correct output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 81987.191 litros
---- user output:
Entradas: 11.3 , 5.7 , 2.3
81.987 litros
-- TEST CASE 2:
---- input:
8.5
9.5
2.2
---- correct output:
Entradas: 8.5 , 9.5 , 2.2
Entradas invalidas
---- user output:
Entradas: 8.5 , 9.5 , 2.2
Entradas invalidas
-- TEST CASE 3:
---- input:
8
4
6
---- correct output:
Entradas: 8.0 , 4.0 , 6.0
Entradas invalidas
---- user output:
Entradas: 8.0 , 4.0 , 6.0
Entradas invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:39:34) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
H = float(input("Digite a H: "))
h = float(input("Digite a h: "))
r = float(input("Digite a r: "))

print("Entradas:",H,",",h,",",r)

if(H<0 or h<0 or r<0 or H<h or H<2*r ):
   print("Entradas invalidas")
elif(h==r):
	# se altura do nivel for igual ao raio o volume vai ser metade da esfera
	volume = (4/3*pi*r**3)/2
	print(round(volume,3),"litros")
elif(h>r and h<=(H-r)):
	# se altura de nivel for maior que o raio e menor ou igual a altura total menos o raio superior
	volume = ((4/3*pi*r**3)/2) + pi*r**2*(h-r)
	print(round(volume,3),"litros")
elif(h>(H-r)):
	x = H-h
	volume = pi*r**2*(h-r) + (4/3*pi*r**3) - pi/3*x**2*(3*r-x)
	print(round(volume,3),"litros")
	 

-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
81.987 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:40:00) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
H = float(input("Digite a H: "))
h = float(input("Digite a h: "))
r = float(input("Digite a r: "))

print("Entradas:",H,",",h,",",r)

if(H<0 or h<0 or r<0 or H<h or H<2*r ):
   print("Entradas invalidas")
elif(h==r):
	# se altura do nivel for igual ao raio o volume vai ser metade da esfera
	volume = (4/3*pi*r**3)/2
	print(round(volume,3),"litros")
elif(h>r and h<=(H-r)):
	# se altura de nivel for maior que o raio e menor ou igual a altura total menos o raio superior
	volume = ((4/3*pi*r**3)/2) + pi*r**2*(h-r)
	print(round(volume,3),"litros")
elif(h>(H-r)):
	x = H-h
	volume = pi*r**2*(h-r) + (4/3*pi*r**3) - pi/3*x**2*(3*r-x)
	print(round(volume,3),"litros")
	 

-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
81.987 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:42:14) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
H = float(input("Digite a H: "))
h = float(input("Digite a h: "))
r = float(input("Digite a r: "))

print("Entradas:",H,",",h,",",r)

if(H<0 or h<0 or r<0 or H<h or H<2*r ):
   print("Entradas invalidas")
elif(h==r):
	# se altura do nivel for igual ao raio o volume vai ser metade da esfera
	volume = (4/3*pi*r**3)/2
	print(round(volume*1000,3),"litros")
elif(h>r and h<=(H-r)):
	# se altura de nivel for maior que o raio e menor ou igual a altura total menos o raio superior
	volume = ((4/3*pi*r**3)/2) + pi*r**2*(h-r)
	print(round(volume*1000,3),"litros")
elif(h>(H-r)):
	x = H-h
	volume = pi*r**2*(h-r) + (4/3*pi*r**3) - pi/3*x**2*(3*r-x)
	print(round(volume*1000,3),"litros")
	 

-- EXECUTION TIME:
0.13479
-- TEST CASE 1:
---- input:
11.3
5.7
2.3
---- correct output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 81987.191 litros
---- user output:
Entradas: 11.3 , 5.7 , 2.3
81987.191 litros
-- TEST CASE 2:
---- input:
8.5
9.5
2.2
---- correct output:
Entradas: 8.5 , 9.5 , 2.2
Entradas invalidas
---- user output:
Entradas: 8.5 , 9.5 , 2.2
Entradas invalidas
-- TEST CASE 3:
---- input:
8
4
6
---- correct output:
Entradas: 8.0 , 4.0 , 6.0
Entradas invalidas
---- user output:
Entradas: 8.0 , 4.0 , 6.0
Entradas invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:42:16) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
H = float(input("Digite a H: "))
h = float(input("Digite a h: "))
r = float(input("Digite a r: "))

print("Entradas:",H,",",h,",",r)

if(H<0 or h<0 or r<0 or H<h or H<2*r ):
   print("Entradas invalidas")
elif(h==r):
	# se altura do nivel for igual ao raio o volume vai ser metade da esfera
	volume = (4/3*pi*r**3)/2
	print(round(volume*1000,3),"litros")
elif(h>r and h<=(H-r)):
	# se altura de nivel for maior que o raio e menor ou igual a altura total menos o raio superior
	volume = ((4/3*pi*r**3)/2) + pi*r**2*(h-r)
	print(round(volume*1000,3),"litros")
elif(h>(H-r)):
	x = H-h
	volume = pi*r**2*(h-r) + (4/3*pi*r**3) - pi/3*x**2*(3*r-x)
	print(round(volume*1000,3),"litros")
	 

-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
81987.191 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:43:25) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
H = float(input("Digite a H: "))
h = float(input("Digite a h: "))
r = float(input("Digite a r: "))

print("Entradas:",H,",",h,",",r)

if(H<0 or h<0 or r<0 or H<h or H<2*r ):
   print("Entradas invalidas")
elif(h==r):
	# se altura do nivel for igual ao raio o volume vai ser metade da esfera
	volume = (4/3*pi*r**3)/2
	print("Volume:",round(volume*1000,3),"litros")
elif(h>r and h<=(H-r)):
	# se altura de nivel for maior que o raio e menor ou igual a altura total menos o raio superior
	volume = ((4/3*pi*r**3)/2) + pi*r**2*(h-r)
	print("Volume:",round(volume*1000,3),"litros")
elif(h>(H-r)):
	x = H-h
	volume = pi*r**2*(h-r) + (4/3*pi*r**3) - pi/3*x**2*(3*r-x)
	print("Volume:",round(volume*1000,3),"litros")
	 

-- EXECUTION TIME:
0.142972
-- TEST CASE 1:
---- input:
11.3
5.7
2.3
---- correct output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 81987.191 litros
---- user output:
Entradas: 11.3 , 5.7 , 2.3
Volume: 81987.191 litros
-- TEST CASE 2:
---- input:
8.5
9.5
2.2
---- correct output:
Entradas: 8.5 , 9.5 , 2.2
Entradas invalidas
---- user output:
Entradas: 8.5 , 9.5 , 2.2
Entradas invalidas
-- TEST CASE 3:
---- input:
8
4
6
---- correct output:
Entradas: 8.0 , 4.0 , 6.0
Entradas invalidas
---- user output:
Entradas: 8.0 , 4.0 , 6.0
Entradas invalidas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:43:26) 
-- CODE:
# Teste todas as possibilidades de entradas 'H', 'h' e 'x'
# Se seu programa funciona para apenas um caso de tese, isso não quer dizer que ele vai funcionar para todos os outros
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import *
H = float(input("Digite a H: "))
h = float(input("Digite a h: "))
r = float(input("Digite a r: "))

print("Entradas:",H,",",h,",",r)

if(H<0 or h<0 or r<0 or H<h or H<2*r ):
   print("Entradas invalidas")
elif(h==r):
	# se altura do nivel for igual ao raio o volume vai ser metade da esfera
	volume = (4/3*pi*r**3)/2
	print("Volume:",round(volume*1000,3),"litros")
elif(h>r and h<=(H-r)):
	# se altura de nivel for maior que o raio e menor ou igual a altura total menos o raio superior
	volume = ((4/3*pi*r**3)/2) + pi*r**2*(h-r)
	print("Volume:",round(volume*1000,3),"litros")
elif(h>(H-r)):
	x = H-h
	volume = pi*r**2*(h-r) + (4/3*pi*r**3) - pi/3*x**2*(3*r-x)
	print("Volume:",round(volume*1000,3),"litros")
	 

-- OUTPUT:
Entradas: 11.3 , 5.7 , 2.3
Volume: 81987.191 litros
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
